--- a/src/main/webapp/relatorios/relatorio_plano_trabalho.jrxml
+++ b/src/main/webapp/relatorios/relatorio_plano_trabalho.jrxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="relatorio_monitoramento_execucao_geral" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="810" leftMargin="16" rightMargin="16" topMargin="20" bottomMargin="20" uuid="6f334d84-cb0f-4354-a6f2-5cdf57481284">
 	<property name="net.sf.jasperreports.export.xls.detect.cell.type" value="true"/>
 	<property name="ireport.zoom" value="2.3579476910000063"/>
@@ -8,49 +9,23 @@
 	<style name="SubTitle" forecolor="#666666" fontName="Arial" fontSize="18"/>
 	<style name="Column header" forecolor="#666666" fontName="Arial" fontSize="12" isBold="true"/>
 	<style name="Detail" fontName="Arial" fontSize="12"/>
-	<style name="Crosstab Data Text" hAlign="Center"/>
+	<style name="Crosstab Data Text" hTextAlign="Center" hImageAlign="Center"/>
 	<parameter name="param_imagem" class="java.lang.String"/>
-	<parameter name="param_sql" class="java.lang.String">
-		<defaultValueExpression><![CDATA[" SELECT 	org.codigo as codigo_org, org.descricao as org,"+
-" 	uo.codigo as codigo_uo, uo.descricao as uo,"+
-" 	prog.codigo as codigo_prog, prog.denominacao as prog,"+
-" 	func.codigo as codigo_func, func.descricao as func,"+
-" 	subfuncao.codigo as codigo_subfunc, subfuncao.descricao as subfunc,"+
-" 	ac.codigo as codigo_acao, ac.denominacao as acao"+
-
-" 	FROM planejamento.acao ac"+
-" 	LEFT JOIN comum.unidade_orcamentaria uo ON (ac.id_unidade_orcamentaria = uo.id_unidade_orcamentaria)"+
-" 	LEFT JOIN planejamento.programa prog ON (ac.id_programa = prog.id_programa)"+
-" 	LEFT JOIN planejamento.funcao func ON (ac.id_funcao = func.id_funcao)"+
-" 	LEFT JOIN planejamento.subfuncao subfuncao ON (ac.id_subfuncao = subfuncao.id_subfuncao)"+
-" 	LEFT JOIN comum.orgao org ON (ac.id_orgao = org.id_orgao)"+
-
-" 	WHERE org.ativo = TRUE and uo.ativo = TRUE and prog.ativo = TRUE and ac.ativo = TRUE"+
-
-
-" 	ORDER BY 1, 3, 5, 7, 9, 11"]]></defaultValueExpression>
-	</parameter>
 	<queryString>
-		<![CDATA[$P!{param_sql}]]>
+		<![CDATA[]]>
 	</queryString>
-	<field name="codigo_org" class="java.lang.String"/>
-	<field name="org" class="java.lang.String"/>
-	<field name="codigo_uo" class="java.lang.String"/>
-	<field name="uo" class="java.lang.String"/>
-	<field name="codigo_prog" class="java.lang.String"/>
-	<field name="prog" class="java.lang.String"/>
-	<field name="codigo_func" class="java.lang.String"/>
-	<field name="func" class="java.lang.String"/>
-	<field name="codigo_subfunc" class="java.lang.String"/>
-	<field name="subfunc" class="java.lang.String"/>
-	<field name="codigo_acao" class="java.lang.String"/>
-	<field name="acao" class="java.lang.String"/>
+	<field name="unidadeOrcamentaria" class="qualitativo.model.UnidadeOrcamentaria"/>
+	<field name="programa" class="qualitativo.model.Programa"/>
+	<field name="funcao" class="qualitativo.model.Funcao"/>
+	<field name="subfuncao" class="qualitativo.model.SubFuncao"/>
+	<field name="codigo" class="java.lang.String"/>
+	<field name="denominacao" class="java.lang.String"/>
 	<group name="orgao_grupo">
-		<groupExpression><![CDATA[$F{codigo_org}]]></groupExpression>
+		<groupExpression><![CDATA[$F{unidadeOrcamentaria}.getOrgao().getCodigo()]]></groupExpression>
 		<groupHeader>
 			<band height="20">
 				<textField>
-					<reportElement uuid="5292c354-02da-4507-b256-ee79e9f5619f" positionType="Float" mode="Opaque" x="0" y="0" width="810" height="20" backcolor="#8A8A8A"/>
+					<reportElement positionType="Float" mode="Opaque" x="0" y="0" width="810" height="20" backcolor="#8A8A8A" uuid="5292c354-02da-4507-b256-ee79e9f5619f"/>
 					<box>
 						<topPen lineWidth="0.5"/>
 						<leftPen lineWidth="0.5"/>
@@ -60,17 +35,20 @@
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font isBold="false" pdfFontName="Helvetica-Bold"/>
 					</textElement>
-					<textFieldExpression><![CDATA["ÓRGÃO: ("+$F{codigo_org}+") - "+$F{org}.toUpperCase()]]></textFieldExpression>
+					<textFieldExpression><![CDATA["ÓRGÃO: ("+$F{unidadeOrcamentaria}.getOrgao().getCodigo()+") - "+$F{unidadeOrcamentaria}.getOrgao().getDescricao().toUpperCase()
+
+
+]]></textFieldExpression>
 				</textField>
 			</band>
 		</groupHeader>
 	</group>
 	<group name="unidade_orcamentaria" keepTogether="true">
-		<groupExpression><![CDATA[$F{codigo_uo}]]></groupExpression>
+		<groupExpression><![CDATA[$F{unidadeOrcamentaria}.getCodigo()]]></groupExpression>
 		<groupHeader>
 			<band height="20">
 				<textField>
-					<reportElement uuid="06080b98-91bb-4d53-8036-31a8fbf501e0" positionType="Float" mode="Opaque" x="0" y="0" width="810" height="20" backcolor="#A7A2A2"/>
+					<reportElement positionType="Float" mode="Opaque" x="0" y="0" width="810" height="20" backcolor="#A7A2A2" uuid="06080b98-91bb-4d53-8036-31a8fbf501e0"/>
 					<box>
 						<topPen lineWidth="0.5"/>
 						<leftPen lineWidth="0.5"/>
@@ -80,17 +58,17 @@
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font size="9" isBold="false" pdfFontName="Helvetica-Bold"/>
 					</textElement>
-					<textFieldExpression><![CDATA["UNIDADE ORÇAMENTÁRIA: ("+$F{codigo_uo}+") - "+$F{uo}.toUpperCase()]]></textFieldExpression>
+					<textFieldExpression><![CDATA["UNIDADE ORÇAMENTÁRIA: ("+$F{unidadeOrcamentaria}.getCodigo()+") - "+$F{unidadeOrcamentaria}.getDescricao().toUpperCase()]]></textFieldExpression>
 				</textField>
 			</band>
 		</groupHeader>
 	</group>
 	<group name="programa_grupo" keepTogether="true">
-		<groupExpression><![CDATA[$F{codigo_prog}]]></groupExpression>
+		<groupExpression><![CDATA[$F{programa}.getCodigo()]]></groupExpression>
 		<groupHeader>
 			<band height="34">
 				<textField>
-					<reportElement uuid="06080b98-91bb-4d53-8036-31a8fbf501e0" positionType="Float" mode="Opaque" x="0" y="0" width="810" height="20" backcolor="#BDBDBD"/>
+					<reportElement positionType="Float" mode="Opaque" x="0" y="0" width="810" height="20" backcolor="#BDBDBD" uuid="06080b98-91bb-4d53-8036-31a8fbf501e0"/>
 					<box>
 						<topPen lineWidth="0.5"/>
 						<leftPen lineWidth="0.5"/>
@@ -100,10 +78,12 @@
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font size="9" isBold="false" pdfFontName="Helvetica-Bold"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{codigo_prog}!=null ?  "PROGRAMA: ("+$F{codigo_prog}+") - "+$F{prog}.toUpperCase() : "PROGRAMA NÃO ENCONTRADO"]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{programa}.getCodigo()!=null ?  "PROGRAMA: ("+$F{programa}.getCodigo()+") - "+$F{programa}.getDenominacao().toUpperCase() : "PROGRAMA NÃO ENCONTRADO"
+
+]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement uuid="6385d67c-8f26-400f-ab1c-a48ff08e5710" x="0" y="20" width="51" height="14"/>
+					<reportElement x="0" y="20" width="51" height="14" uuid="6385d67c-8f26-400f-ab1c-a48ff08e5710"/>
 					<box>
 						<topPen lineWidth="0.5"/>
 						<leftPen lineWidth="0.5"/>
@@ -117,7 +97,7 @@
 					<text><![CDATA[COD]]></text>
 				</staticText>
 				<staticText>
-					<reportElement uuid="6385d67c-8f26-400f-ab1c-a48ff08e5710" x="51" y="20" width="274" height="14"/>
+					<reportElement x="51" y="20" width="274" height="14" uuid="6385d67c-8f26-400f-ab1c-a48ff08e5710"/>
 					<box>
 						<topPen lineWidth="0.5"/>
 						<leftPen lineWidth="0.5"/>
@@ -131,7 +111,7 @@
 					<text><![CDATA[AÇÃO]]></text>
 				</staticText>
 				<staticText>
-					<reportElement uuid="6385d67c-8f26-400f-ab1c-a48ff08e5710" x="376" y="20" width="182" height="14"/>
+					<reportElement x="376" y="20" width="182" height="14" uuid="6385d67c-8f26-400f-ab1c-a48ff08e5710"/>
 					<box>
 						<topPen lineWidth="0.5"/>
 						<leftPen lineWidth="0.5"/>
@@ -145,7 +125,7 @@
 					<text><![CDATA[FUNÇÃO]]></text>
 				</staticText>
 				<staticText>
-					<reportElement uuid="6385d67c-8f26-400f-ab1c-a48ff08e5710" x="609" y="20" width="201" height="14"/>
+					<reportElement x="609" y="20" width="201" height="14" uuid="6385d67c-8f26-400f-ab1c-a48ff08e5710"/>
 					<box>
 						<topPen lineWidth="0.5"/>
 						<leftPen lineWidth="0.5"/>
@@ -159,7 +139,7 @@
 					<text><![CDATA[SUBFUNÇÃO]]></text>
 				</staticText>
 				<staticText>
-					<reportElement uuid="6385d67c-8f26-400f-ab1c-a48ff08e5710" x="325" y="20" width="51" height="14"/>
+					<reportElement x="325" y="20" width="51" height="14" uuid="6385d67c-8f26-400f-ab1c-a48ff08e5710"/>
 					<box>
 						<topPen lineWidth="0.5"/>
 						<leftPen lineWidth="0.5"/>
@@ -173,7 +153,7 @@
 					<text><![CDATA[COD]]></text>
 				</staticText>
 				<staticText>
-					<reportElement uuid="6385d67c-8f26-400f-ab1c-a48ff08e5710" x="558" y="20" width="51" height="14"/>
+					<reportElement x="558" y="20" width="51" height="14" uuid="6385d67c-8f26-400f-ab1c-a48ff08e5710"/>
 					<box>
 						<topPen lineWidth="0.5"/>
 						<leftPen lineWidth="0.5"/>
@@ -195,28 +175,28 @@
 	<title>
 		<band height="142" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="978b0189-e0fe-4348-a117-63d04e32e327" x="0" y="43" width="810" height="20"/>
+				<reportElement x="0" y="43" width="810" height="20" uuid="978b0189-e0fe-4348-a117-63d04e32e327"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font size="10" isBold="false" pdfFontName="Helvetica-Bold"/>
 				</textElement>
 				<text><![CDATA[GOVERNO DO ESTADO DO MARANHÃO]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="978b0189-e0fe-4348-a117-63d04e32e327" x="0" y="63" width="810" height="20"/>
+				<reportElement x="0" y="63" width="810" height="20" uuid="978b0189-e0fe-4348-a117-63d04e32e327"/>
 				<textElement textAlignment="Center">
 					<font size="10" isBold="false" pdfFontName="Helvetica-Bold"/>
 				</textElement>
 				<text><![CDATA[Secretaria de Planejamento e Orçamento (SEPLAN)]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="978b0189-e0fe-4348-a117-63d04e32e327" x="0" y="97" width="810" height="16"/>
+				<reportElement x="0" y="97" width="810" height="16" uuid="978b0189-e0fe-4348-a117-63d04e32e327"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font size="10" isBold="false" pdfFontName="Helvetica-Bold"/>
 				</textElement>
 				<text><![CDATA[RELATÓRIO DE PLANO DE TRABALHO]]></text>
 			</staticText>
 			<image>
-				<reportElement uuid="e8352ace-3b4e-4323-88ff-a9ee324187cb" x="369" y="0" width="105" height="43"/>
+				<reportElement x="369" y="0" width="105" height="43" uuid="e8352ace-3b4e-4323-88ff-a9ee324187cb"/>
 				<imageExpression><![CDATA[$P{param_imagem}]]></imageExpression>
 			</image>
 		</band>
@@ -230,7 +210,7 @@
 	<detail>
 		<band height="13" splitType="Immediate">
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="247587c6-a866-4761-b21b-1d0e9bd83224" positionType="Float" stretchType="RelativeToTallestObject" x="51" y="0" width="274" height="13"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="51" y="0" width="274" height="13" uuid="247587c6-a866-4761-b21b-1d0e9bd83224"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -241,10 +221,10 @@
 					<font size="8"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{acao}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{denominacao}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="247587c6-a866-4761-b21b-1d0e9bd83224" positionType="Float" stretchType="RelativeToTallestObject" x="0" y="0" width="51" height="13"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="0" y="0" width="51" height="13" uuid="247587c6-a866-4761-b21b-1d0e9bd83224"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -255,10 +235,10 @@
 					<font size="8"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{codigo_acao}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{codigo}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="247587c6-a866-4761-b21b-1d0e9bd83224" positionType="Float" stretchType="RelativeToTallestObject" x="376" y="0" width="182" height="13"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="376" y="0" width="182" height="13" uuid="247587c6-a866-4761-b21b-1d0e9bd83224"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -269,10 +249,10 @@
 					<font size="8"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{func}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{funcao}.getDescricao()]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="247587c6-a866-4761-b21b-1d0e9bd83224" positionType="Float" stretchType="RelativeToTallestObject" x="325" y="0" width="51" height="13"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="325" y="0" width="51" height="13" uuid="247587c6-a866-4761-b21b-1d0e9bd83224"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -283,10 +263,10 @@
 					<font size="8"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{codigo_func}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{funcao}.getCodigo()]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="247587c6-a866-4761-b21b-1d0e9bd83224" positionType="Float" stretchType="RelativeToTallestObject" x="609" y="0" width="201" height="13"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="609" y="0" width="201" height="13" uuid="247587c6-a866-4761-b21b-1d0e9bd83224"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -297,10 +277,10 @@
 					<font size="8"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{subfunc}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{subfuncao}.getDescricao()]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="247587c6-a866-4761-b21b-1d0e9bd83224" positionType="Float" stretchType="RelativeToTallestObject" x="558" y="0" width="51" height="13"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="558" y="0" width="51" height="13" uuid="247587c6-a866-4761-b21b-1d0e9bd83224"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -311,14 +291,14 @@
 					<font size="8"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{codigo_subfunc}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{subfuncao}.getCodigo()]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<pageFooter>
 		<band height="9" splitType="Stretch">
 			<textField>
-				<reportElement uuid="470465da-4003-490f-9541-60374e812bb5" x="688" y="3" width="113" height="6"/>
+				<reportElement x="688" y="3" width="113" height="6" uuid="470465da-4003-490f-9541-60374e812bb5"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font size="5"/>
 					<paragraph rightIndent="2"/>
@@ -326,14 +306,14 @@
 				<textFieldExpression><![CDATA["Página "+String.valueOf($V{PAGE_NUMBER})+" de "]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="470465da-4003-490f-9541-60374e812bb5" x="0" y="3" width="131" height="6"/>
+				<reportElement x="0" y="3" width="131" height="6" uuid="470465da-4003-490f-9541-60374e812bb5"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font size="5" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.text.SimpleDateFormat("dd/MM/yyyy HH:mm:ss").format(new java.util.Date())]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement uuid="470465da-4003-490f-9541-60374e812bb5" x="800" y="3" width="10" height="6"/>
+				<reportElement x="800" y="3" width="10" height="6" uuid="470465da-4003-490f-9541-60374e812bb5"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font size="5"/>
 				</textElement>
