--- a/src/main/webapp/relatorios/financeiro/relatorio_financeiro_natureza_despesa.jrxml
+++ b/src/main/webapp/relatorios/financeiro/relatorio_financeiro_natureza_despesa.jrxml
@@ -13,7 +13,7 @@
 		<![CDATA[]]>
 	</queryString>
 	<field name="acao" class="qualitativo.model.Acao"/>
-	<field name="natureza" class="java.lang.String"/>
+	<field name="naturezaDescricao" class="java.lang.String"/>
 	<field name="dotacaoInicial" class="java.math.BigDecimal"/>
 	<field name="disponivel" class="java.math.BigDecimal"/>
 	<field name="empenhado" class="java.math.BigDecimal"/>
@@ -23,6 +23,7 @@
 	<field name="empenhadoSobreDisponivel" class="java.math.BigDecimal"/>
 	<field name="liquidadoSobreAtual" class="java.math.BigDecimal"/>
 	<field name="pagoSobreDisponivel" class="java.math.BigDecimal"/>
+	<field name="natureza" class="java.lang.String"/>
 	<variable name="var_total_dot_inicial_acao" class="java.lang.Double" resetType="Group" resetGroup="acao" calculation="Sum">
 		<variableExpression><![CDATA[$F{dotacaoInicial}]]></variableExpression>
 		<initialValueExpression><![CDATA[new Double (0.0)]]></initialValueExpression>
@@ -1042,11 +1043,7 @@
 					<font size="7"/>
 					<paragraph leftIndent="6"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{natureza}.equals("31") ? "31 - PESSOAL E ENCARGOS" :
-$F{natureza}.equals("32") ? "32 - JUROS E AMORTIZAÇÃO" :
-$F{natureza}.equals("33") ? "33 - CUSTEIO" :
-$F{natureza}.equals("44") ? "44 - INVESTIMENTO" :
-$F{natureza}.equals("45") ? "45 - INVERSÃO FINANCEIRA" : $F{natureza}+" - SEM DESCRIÇÃO"]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{naturezaDescricao}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00">
 				<reportElement x="176" y="0" width="76" height="20" uuid="d0fb068d-f5c9-4ffd-8e17-d687755d32f7"/>
